# create-web-app

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: Dockerfile  config.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  repository.py  schemas.py
app/auth/: dependencies.py  router.py  schemas.py  services.py
app/clients/: router.py  services.py
app/routers/: websockets.py
app/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  services.py  utils.py
front/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.configs.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1707986348619-6d7f357d0b6ca.mjs
front/src/: App.vue  enums.ts  interfaces.ts  main.ts
front/src/components/: AppFooter.vue  AppModalTwoButtons.vue  AppNavBar.vue  AppVisualKeyboard.vue  BaseServerInfo.vue  HelloStats.vue
front/src/stores/: app.ts  server.ts
front/src/views/: AdminView.vue  HelloView.vue  MainView.vue
scripts/: run-dev.sh  run-prod.sh
